Fixed startup screen signup button visibility

--- a/css/style.css
+++ b/css/style.css
@@ -621,8 +621,6 @@ body {
 
 .signup-startup {
     font-size: .5rem;
-    color: purple;
-
 }
 
 .auth-menu {
